# pdf2md

./: GetRequires.bat  LICENSE  README.md  chineseLanguageHelper.py  ocrHelper.py  pathHelper.py  pdf2md.py  pdfHelper.py  pyproject.toml  stringHelper.py  terminalHelper.py
diseloryaPdf2md/: __init__.py  pdf2md.py
